<resources>
    <string name="app_name">ReceptenApp</string>
    <string name="header">Receptenboek</string>
    <string name="zoekRecept">Zoek zelf een recept!</string>
    <string name="suggestie">Wat dacht je van dit recept?</string>

    <string name="receptNaam">Naam recept</string>
    <string name="receptIngredienten">Ingredienten recept:</string>

    <string name="loginTitel">Jouw Receptenboek</string>
    <string name="loginLogin">Log in</string>
    <string name="register">Register</string>
    <string name="loginOf">of</string>
    <string name="loginRegister">Maak een account aan.</string>
</resources>